app/assets/stylesheets/application.css.scss
@import "bootstrap";

.user-info {
  margin-top: 9px;
}

.nav {
  margin-top: 5px;
}

#forgot-password {
  float: right;
  font-size: 80%;
  position: relative;
  top: -10px;
}

#links {
  font-size: 80%;
  border-top: 1px solid #888;
  padding-top: 5px;
}

#loginbox {
  margin-top: 50px;
}

.output {
  border: 1px solid #888;
  padding-left: 5px;
}

#delete-account {
  background-color: #d9534f;
  color: white;
}

